# College-Ai

./: .gitignore  Ak_test.py  README.md  pyproject.toml  test.py
backend/: pyproject.toml
