[project]
name = "College-AI"
version = "0.1.0"
description = "AI-powered, secure, college-specific assistant for IIIT Kottayam using RAG and open-source LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "IIITK AI Team" }
]

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",

    # AI & RAG
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.6.0",
    "pypdf>=4.2.0",

    # Ollama client
    "ollama>=0.1.8",

    # Security & utilities
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",
    "slowapi>=0.1.9",

    # Logging & testing
    "loguru>=0.7.2",
    "pytest>=8.1.1"
]

[tool.uv]
dev-dependencies = [
    "black>=24.3.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
